--- a/gui/app/index.html
+++ b/gui/app/index.html
@@ -177,6 +177,7 @@
     <script type="text/javascript" src="./directives/controls/editable-list.js"></script>
     <script type="text/javascript" src="./directives/controls/editable-tags.js"></script>
     <script type="text/javascript" src="./directives/controls/effectList.js"></script>
+    <script type="text/javascript" src="./directives/controls/exempt-roles.js"></script>
     <script type="text/javascript" src="./directives/controls/fileChooser.js"></script>
     <script type="text/javascript" src="./directives/controls/firebot-input.js"></script>
     <script type="text/javascript" src="./directives/controls/multiselect.js"></script>
