Add a chat notification feed item

--- a/gui/app/index.html
+++ b/gui/app/index.html
@@ -162,9 +162,10 @@
     <!-- include: "type": "js", "files": "directives/**/*.js" -->
     <script type="text/javascript" src="./directives/chat/chat-autocomplete-menu.component.js"></script>
     <script type="text/javascript" src="./directives/chat/chat-user-category.js"></script>
-    <script type="text/javascript" src="./directives/chat/feed%20items/chat-alert.js"></script>
-    <script type="text/javascript" src="./directives/chat/feed%20items/chat-message.js"></script>
-    <script type="text/javascript" src="./directives/chat/feed%20items/reward-redemption.js"></script>
+    <script type="text/javascript" src="./directives/chat/feed-items/chat-alert.js"></script>
+    <script type="text/javascript" src="./directives/chat/feed-items/chat-message.js"></script>
+    <script type="text/javascript" src="./directives/chat/feed-items/chat-notification.js"></script>
+    <script type="text/javascript" src="./directives/chat/feed-items/reward-redemption.js"></script>
     <script type="text/javascript" src="./directives/commands/commandOption.js"></script>
     <script type="text/javascript" src="./directives/commands/simple-command-options.js"></script>
     <script type="text/javascript" src="./directives/conditional-effect/conditionDisplay.js"></script>
