--- a/gui/app/directives/misc/firebot-item-table/firebot-item-table.html
+++ b/gui/app/directives/misc/firebot-item-table/firebot-item-table.html
@@ -101,7 +101,7 @@
           >
             <td ng-if="$ctrl.testButton == true">
               <span
-                style="color: #2aa1c0; font-size: 20px"
+                style="color: #16809c; font-size: 20px"
                 ng-click="$ctrl.onTestButtonClicked({ itemId: item.id })"
               >
                 <i class="fas fa-play-circle clickable"></i>
