Load fontawesome5 kit id from secrets

--- a/gui/app/index.html
+++ b/gui/app/index.html
@@ -15,7 +15,7 @@
     <!--Webfont version of font awesome 5, use these from now on-->
 
     <script
-      src="https://kit.fontawesome.com/1bc4e8dcfe.js"
+      ng-src="{{fontAwesome5KitUrl}}"
       crossorigin="anonymous"
     ></script>
 
