Add http request effect

--- a/gui/app/index.html
+++ b/gui/app/index.html
@@ -256,6 +256,7 @@
     <script type="text/javascript" src="./directives/modals/integrations/addOrEditDiscordWebhookModal.js"></script>
     <script type="text/javascript" src="./directives/modals/integrations/editIntegrationSettingsModal.js"></script>
     <script type="text/javascript" src="./directives/modals/misc/aboutModal.js"></script>
+    <script type="text/javascript" src="./directives/modals/misc/add-or-edit-header-modal.js"></script>
     <script type="text/javascript" src="./directives/modals/misc/botLoginModal.js"></script>
     <script type="text/javascript" src="./directives/modals/misc/chat-settings-modal.js"></script>
     <script type="text/javascript" src="./directives/modals/misc/connectionPanelModal.js"></script>
