--- a/gui/app/index.html
+++ b/gui/app/index.html
@@ -142,6 +142,7 @@
     <script type="text/javascript" src="./services/profile-manager.service.js"></script>
     <script type="text/javascript" src="./services/pronouns.service.js"></script>
     <script type="text/javascript" src="./services/quotes.service.js"></script>
+    <script type="text/javascript" src="./services/screenshot.service.js"></script>
     <script type="text/javascript" src="./services/settings.service.js"></script>
     <script type="text/javascript" src="./services/sidebar-manager.service.js"></script>
     <script type="text/javascript" src="./services/sort-tags.service.js"></script>
