Add ability to play sounds from url #1467

--- a/gui/app/index.html
+++ b/gui/app/index.html
@@ -178,6 +178,7 @@
     <script type="text/javascript" src="./directives/controls/effectList.js"></script>
     <script type="text/javascript" src="./directives/controls/fileChooser.js"></script>
     <script type="text/javascript" src="./directives/controls/firebot-input.js"></script>
+    <script type="text/javascript" src="./directives/controls/firebot-radios.js"></script>
     <script type="text/javascript" src="./directives/controls/multiselect.js"></script>
     <script type="text/javascript" src="./directives/controls/notificationCenter.js"></script>
     <script type="text/javascript" src="./directives/controls/role-based/role-number.js"></script>
