Add consistency in sort tag names

--- a/gui/app/directives/misc/firebot-item-table/firebot-item-table.html
+++ b/gui/app/directives/misc/firebot-item-table/firebot-item-table.html
@@ -67,7 +67,7 @@
             </th>
 
             <th ng-if="$ctrl.sortTagContext != null" class="muted">
-              <i class="fas fa-tag"></i> TAGS
+              <i class="fas fa-tag"></i> SORT TAGS
             </th>
 
             <th ng-if="$ctrl.showStatusIndicator"></th>
