Add an option to add sort tags to triggers while in the add/edit modal

--- a/gui/app/index.html
+++ b/gui/app/index.html
@@ -217,6 +217,7 @@
     <script type="text/javascript" src="./directives/misc/connectionButton.js"></script>
     <script type="text/javascript" src="./directives/misc/connectionIcon.js"></script>
     <script type="text/javascript" src="./directives/misc/contentBlock.js"></script>
+    <script type="text/javascript" src="./directives/misc/context-menu-modal-header.js"></script>
     <script type="text/javascript" src="./directives/misc/disableAnimate.js"></script>
     <script type="text/javascript" src="./directives/misc/draggableModal.js"></script>
     <script type="text/javascript" src="./directives/misc/dynamicHtml.js"></script>
